--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -2,3 +2,12 @@ body {
   background-color: #222;
   color: white;
 }
+
+a {
+  color: gray;
+  text-decoration: none;
+  &:hover{
+    color: white;
+    text-decoration: underline;
+  }
+}
